fixed white space at bottom

--- a/Dashboard/static/styles.css
+++ b/Dashboard/static/styles.css
@@ -43,7 +43,7 @@
     color: #ffff;
     margin-left: 10%;
     padding: 1px 16px;
-    height: 100vh;
+    height: 125vh;
     background-color: #18191A
   }
 
